<resources>
    <string name="app_name">Kaltika</string>
    <string name="bangun_ruang_kubus">Bangun Ruang Kubus</string>
    <string name="bangun_ruang_balok">Bangun Ruang Balok</string>
    <string name="barisan_aritmatika">Barisan &amp; Deret Aritmatika</string>
    <string name="barisan_geometri">Barisan &amp; Deret Geometri</string>
    <string name="panjang_rusuk_hint">Panjang Rusuk (r)</string>
    <string name="panjang_balok_hint">Panjang Balok (p)</string>
    <string name="lebar_balok_hint">Lebar Balok (l)</string>
    <string name="tinggi_balok_hint">Tinggi Balok (t)</string>
    <string name="suku_pertama_hint">Suku Pertama (a)</string>
    <string name="beda_hint">Beda (b)</string>
    <string name="rasio_hint">Rasio (r)</string>
    <string name="suku_n_hint">Suku ke-N (n)</string>
    <string name="panjang_rusuk_feedback">Panjang rusuk harus diisi.</string>
    <string name="panjang_balok_feedback">Panjang balok harus diisi.</string>
    <string name="lebar_balok_feedback">Lebar balok harus diisi.</string>
    <string name="tinggi_balok_feedback">Tinggi balok harus diisi.</string>
    <string name="suku_pertama_feedback">Suku Pertama harus diisi.</string>
    <string name="beda_feedback">Beda harus diisi.</string>
    <string name="rasio_feedback">Rasio harus diisi.</string>
    <string name="suku_n_feedback">Suku ke-N harus diisi.</string>
    <string name="luas_permukaan">Luas Permukaan</string>
    <string name="volume">Volume</string>
    <string name="barisan">Barisan</string>
    <string name="deret">Deret</string>
    <string name="header_hasil_luas_permukaan">Hasil Luas Permukaan</string>
    <string name="header_hasil_volume">Hasil Volume</string>
    <string name="header_hasil_barisan">Hasil Barisan</string>
    <string name="header_hasil_deret">Hasil Deret</string>
    <string name="hasil_luas_permukaan">%.1f cm&#xB2;</string>
    <string name="hasil_volume">%.1f cm&#xB3;</string>
    <string name="hasil_barisan_deret">%.1f</string>
    <string name="kubus_menu_name">Kubus</string>
    <string name="balok_menu_name">Balok</string>
    <string name="aritmatika_menu_name">Aritmatika</string>
    <string name="geometri_menu_name">Geometri</string>
    <string name="bangun_ruang">Bangun Ruang</string>
    <string name="barisan_deret">Barisan &amp; Deret</string>
    <string name="share_template">Download Aplikasi Kaltika di Playstore.</string>
    <string name="data_history_kosong">Belum Ada Histori.</string>
    <string name="data_history">%.1f</string>
    <string name="delete_confirmation">Yakin ingin menghapus data?</string>
    <string name="clear_confirmation">Yakin ingin menghapus semua data?</string>
    <string name="yes_confirmation">Yakin</string>
    <string name="no_confirmation">Tidak</string>
    <string name="koneksi_error">Koneksi error.</string>
    <string name="channel_name">Reminder</string>
    <string name="channel_desc">Reminder belajar.</string>
    <string name="notif_title">Reminder belajar!</string>
    <string name="notif_text">Jangan lupa belajar matematika hari ini.</string>
</resources>
